cdk.out/alb-stack.template.json
{
 "Resources": {
  "AppALBDBE7026A": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "AppALBSecurityGroup30809A2C",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCPublicSubnet1Subnet571CA78A57315E29"
     },
     {
      "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCPublicSubnet2Subnet630FF9A89505A940"
     }
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/Resource"
   }
  },
  "AppALBSecurityGroup30809A2C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB albstackAppALB26CED350",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/SecurityGroup/Resource"
   }
  },
  "AppALBHttpRedirectCC71691B": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_302"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "AppALBDBE7026A"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/HttpRedirect/Resource"
   }
  },
  "AppALBHttpsListener75ADFE18": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": {
       "Fn::ImportValue": "acm-stack:ExportsOutputRefSSLCertificate2E93C5653F34B868"
      }
     }
    ],
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DefaultFrontendTG22676E6D"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "AppALBDBE7026A"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/HttpsListener/Resource"
   }
  },
  "AppALBHttpsListenerBackendApiRuleRule57A84262": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "BackendTargetGroupECF98930"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/api/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "AppALBHttpsListener75ADFE18"
    },
    "Priority": 1
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/HttpsListener/BackendApiRuleRule/Resource"
   }
  },
  "AppALBHttpsListenerBackendAvatarsRuleRule0814D634": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "BackendTargetGroupECF98930"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/avatars/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "AppALBHttpsListener75ADFE18"
    },
    "Priority": 2
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/HttpsListener/BackendAvatarsRuleRule/Resource"
   }
  },
  "AppALBHttpsListenerFrontendDefaultRuleRule13ADB3F7": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "FrontendTargetGroupED7B3E5D"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "AppALBHttpsListener75ADFE18"
    },
    "Priority": 10
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/AppALB/HttpsListener/FrontendDefaultRuleRule/Resource"
   }
  },
  "DefaultFrontendTG22676E6D": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/DefaultFrontendTG/Resource"
   }
  },
  "BackendTargetGroupECF98930": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/api/health",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/BackendTargetGroup/Resource"
   }
  },
  "FrontendTargetGroupED7B3E5D": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/FrontendTargetGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/82RTUsDMRCGf0tzlGysW0+9VRFZEJTWWykyTaZrbJys+WgpIf9dNt3DFsSLFw9DmHfeeWbC1KKe3orpBI6+kmpfGb0VaRVA7jkc/VtCAz5oaSyoLRggqak91CItus5oCUFberKg7koN3ZpdMT7Eht/vLop83KR9QLps+C3OsKHpJ9AyGhx7Sj7yvYJrMTw6G7veNkozR1mLtEIZnQ6noq0TO3SSzct0hV463fWUQQFj7HFhzHMMWxtJsfkOjMfMEwOlGmodet9vwObrxCRQQ0YTnpXgInImLRHKnukHaCT9FbFRJc085fL3At4M5IcxuK8Oph65+RfT/+4pl744Rs6Zv5zCu6XrmbipxWzy4bWuXKSgP1Esz+83FS30YMoCAAA="
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefBackendTargetGroupECF989302A4524FE": {
   "Value": {
    "Ref": "BackendTargetGroupECF98930"
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputRefBackendTargetGroupECF989302A4524FE"
   }
  },
  "ExportsOutputFnGetAttAppALBSecurityGroup30809A2CGroupId7BC01C01": {
   "Value": {
    "Fn::GetAtt": [
     "AppALBSecurityGroup30809A2C",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputFnGetAttAppALBSecurityGroup30809A2CGroupId7BC01C01"
   }
  },
  "ExportsOutputRefDefaultFrontendTG22676E6D3F6AADA6": {
   "Value": {
    "Ref": "DefaultFrontendTG22676E6D"
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputRefDefaultFrontendTG22676E6D3F6AADA6"
   }
  },
  "ExportsOutputRefFrontendTargetGroupED7B3E5DC932CE91": {
   "Value": {
    "Ref": "FrontendTargetGroupED7B3E5D"
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputRefFrontendTargetGroupED7B3E5DC932CE91"
   }
  },
  "ExportsOutputFnGetAttAppALBDBE7026ACanonicalHostedZoneIDCF79ADAC": {
   "Value": {
    "Fn::GetAtt": [
     "AppALBDBE7026A",
     "CanonicalHostedZoneID"
    ]
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputFnGetAttAppALBDBE7026ACanonicalHostedZoneIDCF79ADAC"
   }
  },
  "ExportsOutputFnGetAttAppALBDBE7026ADNSNameA085A48D": {
   "Value": {
    "Fn::GetAtt": [
     "AppALBDBE7026A",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputFnGetAttAppALBDBE7026ADNSNameA085A48D"
   }
  },
  "ExportsOutputRefAppALBDBE7026AA115F41B": {
   "Value": {
    "Ref": "AppALBDBE7026A"
   },
   "Export": {
    "Name": "alb-stack:ExportsOutputRefAppALBDBE7026AA115F41B"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
