cdk.out/security-stack.template.json
{
 "Resources": {
  "lambdasg77597EA8": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for Lambda Functions",
    "GroupName": "tmp-lambda-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/lambdasg/Resource"
   }
  },
  "bastionsg1FA4DDAF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for Bastion Host",
    "GroupName": "tmp-bastion-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "SSH Access",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/bastionsg/Resource"
   }
  },
  "redissg9A3AB737": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for Redis Cluster",
    "GroupName": "tmp-redis-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/redissg/Resource"
   }
  },
  "redissgfromsecuritystacklambdasgF241D9AE6379B4CD053A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Access from Lambda functions",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "redissg9A3AB737",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "lambdasg77597EA8",
      "GroupId"
     ]
    },
    "ToPort": 6379
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/redissg/from securitystacklambdasgF241D9AE:6379"
   }
  },
  "TranscendenceSGDC5F8585": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow HTTP and HTTPS",
    "GroupName": "tmp-transcendence-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/TranscendenceSG/Resource"
   }
  },
  "dbsgCE6973BD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SG for RDS",
    "GroupName": "tmp-db-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/db-sg/Resource"
   }
  },
  "dbsgfromsecuritystackTranscendenceSGFF49A38A5432A4E19654": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "PostgreSQL access from ECS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "dbsgCE6973BD",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "TranscendenceSGDC5F8585",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/db-sg/from securitystackTranscendenceSGFF49A38A:5432"
   }
  },
  "TranscendenceECSTaskRole66F30C08": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "Role for ECS tasks to access S3 and Secrets Manager",
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonS3ReadOnlyAccess"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/SecretsManagerReadWrite"
       ]
      ]
     }
    ],
    "RoleName": "tmp-TranscendenceECSTaskRole"
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/TranscendenceECSTaskRole/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/72SS0/DMBCEf0t9rNxQUk65BQ6oB2iVHqMKuesFTJ118IMqsvLfUR5F5XFBgp5sjcafZ7SbJun8KplPxMHNQO5nWu2SuPEC9lwc3ENESJO4QQhW+ebWmlCXkb3VwDI2ZZwJrc0h13oV/M4EkizzNiBnEh1YVXtlaHS6U8a9qLDXW/7XNCHlkp4sOlcEjSwrIwNBS9KKcFAGJhgihA7pRmYg9RpwKY+olvfylG3PkLLz/+uPZ86/5TeP9GlvvgkjoOVKVEksjMYyMuFcqFBeNyyLrLaKQNVC5wAmkD8W6D3dgxw+0rY/FbBG49fcd4LEE8q10Qqafj+qUyW3I2/7a3/fuYvVtt1tFXwdPC/QmWABy2Gu68Y/G7pYJJdpspi8OKVmNpBXFSbFcL4DeZs5CJMDAAA="
   },
   "Metadata": {
    "aws:cdk:path": "security-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "DBSecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "dbsgCE6973BD",
     "GroupId"
    ]
   }
  },
  "VpcId": {
   "Value": {
    "Fn::ImportValue": "vpc:ExportsOutputReftransendenceVPCE5114C9175EDFA28"
   }
  },
  "SecurityGroupId": {
   "Value": {
    "Fn::GetAtt": [
     "TranscendenceSGDC5F8585",
     "GroupId"
    ]
   }
  },
  "ExportsOutputFnGetAttdbsgCE6973BDGroupIdACE24D8F": {
   "Value": {
    "Fn::GetAtt": [
     "dbsgCE6973BD",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "security-stack:ExportsOutputFnGetAttdbsgCE6973BDGroupIdACE24D8F"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
